cmake_minimum_required(VERSION 3.10)
project(LAN_chat VERSION 1.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED true)
find_package(Threads REQUIRED)
add_executable(LAN_chat src/server.cpp)
target_link_libraries(LAN_chat Threads::Threads)
add_executable(client src/client.cpp)
target_link_libraries(client Threads::Threads) 
